Oficializando pasta de imagens

--- a/Codigos/index.html
+++ b/Codigos/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <h1>Cookie Play</h1>
+    <div class="contagem" onclick="clique()">
+        <p id="valorNaTela"></p>
+        <p>cookies</p>
+    </div>
     <div class="cokie">
-        <img src="cookie.png" alt="">
+        <img src="../Imagens/cookie.png" alt="">
     </div>
     <div class="opcoes">
 
