--- a/Codigos/index.html
+++ b/Codigos/index.html
@@ -6,22 +6,29 @@
     <title>Cookie Play</title>
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+</style>
 </head>
 <body>
     <h1>Cookie Play</h1>
-    <div class="contagem" onclick="clique()">
+
+    <div class="contagem" ">
         <p id="valorNaTela"></p>
         <p>cookies</p>
     </div>
-    <div class="cokie">
-        <img src="../Imagens/cookie.png" alt="">
+
+    <div class="cokie" onclick="clique()">
+        <img src="../Imagens/cookierecortado.png" alt="">
     </div>
     <div class="opcoes">
 
     </div>
+
     <div class="loja">
 
     </div>
+
     <div class="estatisticas">
 
     </div>
