--- a/Codigos/index.html
+++ b/Codigos/index.html
@@ -6,11 +6,9 @@
     <title>Cookie Play</title>
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
-    <style>
-@import url('https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-</style>
+    
 </head>
-<body>
+<body background="../Imagens/Fundo.png">
     <h1>Cookie Play</h1>
 
     <div class="contagem" ">
