--- a/Codigos/index.html
+++ b/Codigos/index.html
@@ -26,52 +26,52 @@
     <div class="loja">
         <h2>Loja</h2>
         <div class="itens">
-            <div class="item">
+            <div class="item-clicker-1">
                 <p>clicker+1</p>
                 <button onclick="comprarUpgrade(+1)">Comprar</button>
                 <span class="preco">5 cookies</span>
             </div>
-            <div class="item">
+            <div class="item-vovo">
                 <p>vovó+1</p>
                 <button onclick="comprarUpgrade(+2)">Comprar</button>
                 <span class="preco">10 cookies</span>
             </div>
-            <div class="item">
+            <div class="item-fabrica">
                 <p>fábrica+1</p>
                 <button onclick="comprarUpgrade(+3)">Comprar</button>
                 <span class="preco">50 cookies</span>
             </div>
-            <div class="item">
+            <div class="item-magico">
                 <p>mágico+1</p>
                 <button onclick="comprarUpgrade(+4)">Comprar</button>
                 <span class="preco">100 cookies</span>
             </div>
-            <div class="item">
+            <div class="item-laboratorio">
                 <p>laboratório+1</p>
                 <button onclick="comprarUpgrade(+5)">Comprar</button>
                 <span class="preco">500 cookies</span>
             </div>
-            <div class="item">
+            <div class="item-gerador">
                 <p>gerador de cookies+1</p>
                 <button onclick="comprarUpgrade(+6)">Comprar</button>
                 <span class="preco">1000 cookies</span>
             </div>
-            <div class="item">
+            <div class="item-nave">
                 <p>nave espacial+1</p>
                 <button onclick="comprarUpgrade(+7)">Comprar</button>
                 <span class="preco">5000 cookies</span>
             </div>
-            <div class="item">
+            <div class="item-estacao">
                 <p>estação espacial+1</p>
                 <button onclick="comprarUpgrade(+8)">Comprar</button>
                 <span class="preco">10000 cookies</span>
             </div>
-            <div class="item">
+            <div class="item-buraco-negro">
                 <p>buraco negro+1</p>
                 <button onclick="comprarUpgrade(+9)">Comprar</button>
                 <span class="preco">50000 cookies</span>
             </div>
-            <div class="item">
+            <div class="item-universo-paralelo">
                 <p>universo paralelo+1</p>
                 <button onclick="comprarUpgrade(+10)">Comprar</button>
                 <span class="preco">100000 cookies</span>
