--- a/Codigos/index.html
+++ b/Codigos/index.html
@@ -16,10 +16,16 @@
         <p>cookies</p>
     </div>
 
-    <div class="cokie" onclick="clique()">
-        <img src="../Imagens/cookierecortado-removebg-preview.png" alt="">
+    <div class="cokie" >
+        <h1>+1</h1>
+        <div class="imgdocu" onclick="clique()">
+            <img src="../Imagens/cookierecortado-removebg-preview.png" alt="">
+
+        </div>
     </div>
+
     <p id="erro"></p>
+
     <div class="barraDivisoria">
         <img src="../Imagens/barralateral.png" alt="">
     </div>
