--- a/Codigos/index.html
+++ b/Codigos/index.html
@@ -88,8 +88,21 @@
         </div>
     </div>
 
-    <div class="estatisticas">
-
+     <div class="estatisticas">
+       <h2>Geral</h2>
+      <div>cookies no banco:</div>
+      <div>cookies assados (nesta ascensao):</div>
+      <div>cookies assados (desde o inicio):</div>
+      <div>cookies perdidos ao ascender:</div>
+      <div>legado iniciado:</div>
+      <div>sequencia iniciada:</div>
+      <div>construções obtidas:</div>
+      <div>cookies por segundo:</div>
+      <div>cookies crus por segundo:</div>
+      <div>cookies por cliques:</div>
+      <div>cliques em cookies:</div>
+      <div>cookies caseiros:</div>
+      <div>cliques em cookies dourados:</div>
     </div>
     
     </body>
