mudei o nome dos itens da loja pq tava uma bagunca

--- a/Codigos/index.html
+++ b/Codigos/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="itens-2">
             <div class="item-magico">
-                <p>mágico + 47</p>
+                <p>cabana do mágico + 47</p>
                 <button onclick="buff04()">100 cookies</button>
             </div>
             <div class="item-laboratorio">
@@ -66,7 +66,7 @@
         </div>
         <div class="itens-3">
             <div class="item-nave">
-                <p>nave espacial + 7800</p>
+                <p>relogio espacial + 7800</p>
                 <button onclick="buff07()">10000 cookies</button>
             </div>
             <div class="item-estacao">
